[package]
authors = ["madiele92@gmail.com"]
edition = "2021"
name = "vod2pod-rss"
version = "1.2.5"

[lib]
path = "src/lib.rs"

[[bin]]
name = "app"
path = "src/main.rs"

[dependencies]
actix-rt = "=2.10.0"
actix-web = "=4.11.0"
async-trait = "=0.1.88"
cached = { version = "=0.56.0", features = ["redis_tokio"] }
chrono = "=0.4.41"
configs = "0.1.0"
eyre = "=0.6"
feed-rs = "=2.3.1"
futures = "=0.3.31"
genawaiter = {version = "=0.99", features = ["futures03"] }
google-youtube3 = "=5.0.4"
iso8601-duration = "=0.2.0"
log = "=0.4.27"
mime = "=0.3.17"
openssl = { version = "*", features = ["vendored"] } #this is here just to make cross-compiling work during github actions
redis = { version = "=0.32", features = ["tokio-comp"] }
regex = "=1.11.1"
reqwest = { version = "=0.12.22", features = ["json"] }
rss = { version = "=2.0", features = ["serde"] }
serde = "=1.0.219"
serde_json = "=1.0.142"
simple_logger = "=5.0"
tokio = { version = "=1.47.1", features = ["macros", "process"]}
url = { version="=2.5.4", features = ["serde"]}
uuid = { version= "=1.18.0", features = ["v4", "serde"]}


[dev-dependencies]
temp-env ={ version = "=0.3.6", features = ["async_closure"] }
env_logger = "*"
test-log = "0.2.11"
